--- a/css/main.css
+++ b/css/main.css
@@ -18,38 +18,26 @@ a {
   text-decoration: none;
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  background: linear-gradient(to top left, #c0c0c0 0%, #c6f1bd 50%, #c0c0c0 100%);
+  background: #c6f1bd;
 }
 
 main {
-  height: 100%;
   overflow: hidden;
 }
 
-main::before {
-  content: url("../img/pawprint_background_black_mobile.png");
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-repeat: repeat;
-  background-position: center;
-  background-size: cover;
-  z-index: -1;
-  opacity: 0.1;
-  height: 120%;
-  overflow: hidden;
-}
-
-.menu-spacer {
-  padding-top: 2rem;
+.rdp {
+  padding-top: 10em;
 }
 
 .disclaimer {
   margin-block: 1rem;
   color: #2C2227;
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
-  font-size: 0.7rem;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -57,52 +45,65 @@ main::before {
 .disclaimer .warning {
   color: red;
   text-transform: uppercase;
+  font-weight: 700;
+}
+
+.copyright {
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+  font-size: 0.7rem;
+  text-align: right;
+  padding: 0.5rem;
+  color: #2C2227;
+  opacity: 0.6;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.social {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: fixed;
+  z-index: 10;
+}
+
+.fa-facebook {
+  color: #065FB5;
+  text-shadow: 1px 1px 2px black;
+}
+
+.fa-whatsapp {
+  color: #25D366;
+  text-shadow: 1px 1px 2px black;
 }
 
 .navbar-container {
   background-color: #b6b4b4;
   border-radius: 10px;
   box-shadow: 2px 2px 5px black;
-  padding-bottom: 1rem;
   width: 80vw;
-  margin-inline: auto;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  position: fixed;
+  z-index: 9;
+  margin-top: 1rem;
 }
 .navbar-container .navbar-heading {
   color: #80ff80;
   font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
-  padding: 1rem 0.5rem;
   text-align: center;
   text-shadow: 1px 1px 2px black;
   display: flex;
   flex-direction: column;
-}
-.navbar-container .navbar-heading .span-one {
-  font-size: 2.5rem;
-}
-.navbar-container .navbar-heading .span-two {
-  font-size: 1.5rem;
 }
 .navbar-container .navmenu {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 1rem;
-}
-.navbar-container .social {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  font-size: 1.7rem;
-  margin-top: 1rem;
-  gap: 2rem;
-}
-.navbar-container .social .fa-facebook {
-  color: #065FB5;
-  text-shadow: 1px 1px 2px black;
-}
-.navbar-container .social .fa-whatsapp {
-  color: #25D366;
-  text-shadow: 1px 1px 2px black;
 }
 
 .menu-item-link {
@@ -116,7 +117,6 @@ main::before {
 }
 .menu-item.active > a {
   opacity: 0.7;
-  font-size: 1.1rem;
   text-decoration: underline;
 }
 
@@ -124,37 +124,24 @@ main::before {
   font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
   color: #80ff80;
   text-align: center;
-  font-size: 3rem;
-  width: 90vw;
-  margin-inline: auto;
+  width: 100%;
   text-shadow: 2px 2px 5px black;
-  padding-bottom: 1rem;
   display: flex;
   flex-direction: column;
-}
-.rdp-name span {
-  font-size: 2rem;
+  width: 100%;
 }
 .rdp-statement {
   font-family: "Mali", Arial, Helvetica, sans-serif;
-  font-size: 1.2rem;
   text-align: center;
   color: #2C2227;
-  letter-spacing: 0.2rem;
-  font-weight: 500;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  opacity: 0.8;
 }
 .rdp-map {
-  margin-top: 2rem;
-  width: 300px;
-  height: 100%;
   margin-inline: auto;
-}
-.rdp-contact-heading {
-  font-size: 2rem;
-  text-align: center;
-  font-family: "Mali", Arial, Helvetica, sans-serif;
-  color: #80ff80;
-  text-shadow: 2px 2px 2px black;
+  box-shadow: 0px 2px 10px black;
+  margin-bottom: 1rem;
 }
 
 .rdp-contact {
@@ -166,25 +153,19 @@ main::before {
   margin-top: 1.5rem;
   color: #80ff80;
   text-shadow: 2px 2px 3px black;
-  font-size: 2rem;
   font-family: "Mali", Arial, Helvetica, sans-serif;
-  margin-bottom: 1rem;
 }
 
 .rdp-contact-display {
-  margin-left: 2rem;
-  font-size: 1.2rem;
   text-align: left;
   font-weight: 500;
 }
 .rdp-contact-display i {
-  margin-right: 0.5rem;
   color: #80ff80;
   text-shadow: 1px 1px 3px black;
   transition: 150ms ease-in-out;
 }
 .rdp-contact-display a {
-  font-size: 1rem;
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
   color: #2C2227;
   transition: 150ms ease-in-out;
@@ -194,7 +175,6 @@ main::before {
   opacity: 0.8;
 }
 .rdp-contact-display span {
-  font-size: 1rem;
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
   color: #2C2227;
 }
@@ -213,7 +193,7 @@ main::before {
   text-shadow: none;
 }
 .rdp-contact-display-address {
-  margin-bottom: 0.9rem;
+  margin-bottom: 0.8rem;
 }
 .rdp-contact-display-address:hover i {
   color: #2C2227;
@@ -227,18 +207,279 @@ main::before {
   font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
   color: #80ff80;
   text-align: center;
-  font-size: 3rem;
   text-shadow: 2px 2px 5px black;
-  padding-bottom: 1rem;
 }
 .rdp-about-p {
   font-size: 1rem;
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
   text-align: center;
-  padding: 2rem;
 }
-.rdp-about-p span {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 2rem;
+
+.rdp-bookings-heading1 {
+  font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
+  color: #80ff80;
+  text-align: center;
+  font-size: 3rem;
+  text-shadow: 2px 2px 5px black;
+  padding-bottom: 1rem;
+}
+
+.rdp-bookings-heading2 {
+  font-family: "Mali", Arial, Helvetica, sans-serif;
+  color: #80ff80;
+  font-size: 3rem;
+  text-shadow: 2px 2px 5px black;
+  padding-bottom: 1rem;
+}
+
+.rdp-bookings-form {
+  width: 90vw;
+  height: 100%;
+  margin-block: 1rem;
+  background-color: #b6b4b4;
+  box-shadow: 5px 5px 10px black;
+  border-radius: 10px;
+}
+
+.rdp-gallery {
+  font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
+  color: #80ff80;
+  text-align: center;
+  font-size: 3rem;
+  text-shadow: 2px 2px 5px black;
+  padding-bottom: 1rem;
+}
+
+@media screen and (max-width: 576px) {
+  body::before {
+    content: url("../img/pawprint_background_black_mobile.png");
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-size: cover;
+    background-repeat: repeat;
+    background-position: center;
+    opacity: 0.1;
+    overflow: hidden;
+    width: 100%;
+    z-index: -1;
+  }
+
+  .navbar-heading .span-one {
+    font-size: 2.5rem;
+  }
+  .navbar-heading .span-two {
+    font-size: 1.5rem;
+  }
+
+  .active > a {
+    font-size: 1.1rem;
+  }
+
+  .social {
+    font-size: 2.1rem;
+    left: 1%;
+    gap: 1rem;
+  }
+
+  .disclaimer {
+    font-size: 0.7rem;
+  }
+
+  .rdp-name {
+    font-size: 3rem;
+    padding-bottom: 1rem;
+  }
+  .rdp-name span {
+    font-size: 2rem;
+  }
+  .rdp-statement {
+    font-size: 1.2rem;
+  }
+  .rdp-map {
+    margin-top: 2rem;
+    width: 300px;
+    height: 400px;
+  }
+  .rdp-contact-heading {
+    font-size: 5rem;
+  }
+
+  .rdp-contact-heading {
+    margin-top: 1.5rem;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  .rdp-contact-display {
+    font-size: 1.5rem;
+    margin-left: 2rem;
+  }
+  .rdp-contact-display i {
+    margin-right: 0.5rem;
+  }
+  .rdp-contact-display a {
+    font-size: 1rem;
+  }
+  .rdp-contact-display span {
+    font-size: 1rem;
+  }
+
+  .rdp-about {
+    font-size: 3rem;
+  }
+  .rdp-about-p {
+    font-size: 1rem;
+  }
+  .rdp-about-img {
+    display: block;
+    width: 100%;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 576px) {
+  .navbar-container {
+    width: 60vw;
+  }
+
+  body::before {
+    content: url("../img/pawprint_background_black_med.png");
+    position: fixed;
+    background-repeat: repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+    opacity: 0.1;
+    width: 100%;
+  }
+
+  main {
+    width: 100%;
+  }
+
+  .navbar-container .span-one {
+    font-size: 4rem;
+  }
+  .navbar-container .span-two {
+    font-size: 2.5rem;
+  }
+
+  .menu-item-link {
+    font-size: 1.5rem;
+  }
+
+  .active > a {
+    font-size: 1.6rem;
+  }
+
+  .social {
+    font-size: 3rem;
+    left: 12%;
+  }
+
+  .disclaimer {
+    font-size: 0.8rem;
+  }
+
+  .rdp {
+    padding-top: 15em;
+  }
+  .rdp-name {
+    font-size: 4rem;
+    margin-bottom: 1rem;
+  }
+  .rdp-name span {
+    font-size: 2.5rem;
+  }
+  .rdp-statement {
+    font-size: 1.2rem;
+  }
+  .rdp-map {
+    margin-top: 2rem;
+    width: 400px;
+    height: 300px;
+  }
+
+  .rdp-contact-heading {
+    margin-top: 1.5rem;
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+
+  .rdp-contact-display {
+    font-size: 3rem;
+    margin-left: 7rem;
+  }
+  .rdp-contact-display i {
+    margin-right: 1rem;
+  }
+  .rdp-contact-display a {
+    font-size: 1.3rem;
+  }
+  .rdp-contact-display span {
+    font-size: 1.3rem;
+  }
+
+  .rdp-about {
+    font-size: 3rem;
+  }
+  .rdp-about-p {
+    font-size: 1.2rem;
+  }
+  .rdp-about-img {
+    display: block;
+    width: 60%;
+    height: auto;
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .navbar-container {
+    width: 70vw;
+  }
+
+  .social {
+    font-size: 3rem;
+    left: 10%;
+  }
+
+  .rdp {
+    padding-top: 15em;
+  }
+  .rdp-name {
+    font-size: 5rem;
+    margin-bottom: 1rem;
+  }
+  .rdp-name span {
+    font-size: 3.5rem;
+  }
+  .rdp-statement {
+    font-size: 1.8rem;
+  }
+  .rdp-map {
+    margin-top: 2rem;
+    width: 700px;
+    height: 500px;
+  }
+
+  .rdp-contact-display {
+    font-size: 3rem;
+    margin-inline: auto;
+    width: 40vw;
+    padding-block: 2rem;
+  }
+
+  .rdp-about {
+    font-size: 4rem;
+  }
+  .rdp-about-p {
+    font-size: 1.3rem;
+  }
+  .rdp-about-img {
+    display: block;
+    width: 60%;
+    height: auto;
+    margin-bottom: 1rem;
+  }
 }
