--- a/css/main.css
+++ b/css/main.css
@@ -23,24 +23,30 @@ html {
 }
 
 body {
-  background: #c6f1bd;
+  background-color: #c6f1bd;
 }
 
 main {
   overflow: hidden;
 }
 
-.rdp {
-  padding-top: 10em;
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 .disclaimer {
   margin-block: 1rem;
-  color: #2C2227;
+  color: #0f0f0f;
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
-  text-align: center;
+  text-align: left;
+  width: 50%;
+  padding: 1rem;
+  font-weight: 600;
 }
 .disclaimer .warning {
   color: red;
@@ -53,37 +59,79 @@ main {
   font-size: 0.7rem;
   text-align: right;
   padding: 0.5rem;
-  color: #2C2227;
-  opacity: 0.6;
+  color: #0f0f0f;
+  opacity: 0.8;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  right: 0;
+  width: 50%;
+}
+.copyright p {
+  margin-right: 0.5rem;
+}
+.copyright span {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+}
+.copyright-logo {
+  width: 3.5rem;
+  height: 3.5rem;
+  cursor: pointer;
+}
+
+.modal-content {
+  background-color: #c6daec;
+}
+.modal-title {
+  font-weight: 600;
+}
+.modal-body {
+  transition: 300ms ease-in-out;
+}
+.modal-body a {
+  margin-left: 1rem;
+  color: black;
+  opacity: 0.8;
+}
+.modal-body a:hover {
+  opacity: 0.7;
+  text-decoration: underline;
 }
 
 .social {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  position: fixed;
+  position: absolute;
   z-index: 10;
+  top: 0;
 }
 
 .fa-facebook {
   color: #065FB5;
-  text-shadow: 1px 1px 2px black;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
+  text-align: center;
+  background-color: #d4d4d4;
+  border-radius: 50%;
+  box-shadow: 0px 3px 5px black;
 }
 
 .fa-whatsapp {
   color: #25D366;
-  text-shadow: 1px 1px 2px black;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
+  text-align: center;
+  background-color: #d4d4d4;
+  border-radius: 50%;
+  box-shadow: 0px 3px 5px black;
 }
 
 .navbar-container {
+  background-image: url("../img/pawprint_background_black_med.png");
+  background-size: contain;
+  background-blend-mode: soft-light;
   background-color: #b6b4b4;
   border-radius: 10px;
   box-shadow: 2px 2px 5px black;
-  width: 80vw;
   top: 0;
   left: 50%;
   transform: translate(-50%, 0%);
@@ -95,29 +143,34 @@ main {
   color: #80ff80;
   font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
   text-align: center;
-  text-shadow: 1px 1px 2px black;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 .navbar-container .navmenu {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 1rem;
 }
 
 .menu-item-link {
-  color: #2C2227;
+  color: #0f0f0f;
   font-family: "Bebas Neue", Arial, Helvetica, sans-serif;
   letter-spacing: 0.1rem;
-  transition: 300ms;
+  transition: 150ms ease-in-out;
+  text-shadow: 1px 1px 2px antiquewhite, 2px 2px 2px antiquewhite;
 }
-.menu-item-link:hover {
-  opacity: 0.7;
+.menu-item-link:hover, .menu-item-link:focus {
+  color: #80ff80;
+  text-decoration: underline;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
 }
 .menu-item.active > a {
-  opacity: 0.7;
+  color: #80ff80;
   text-decoration: underline;
+  transition: 150ms ease-in-out;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
 }
 
 .rdp-name {
@@ -125,7 +178,7 @@ main {
   color: #80ff80;
   text-align: center;
   width: 100%;
-  text-shadow: 2px 2px 5px black;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -133,7 +186,7 @@ main {
 .rdp-statement {
   font-family: "Mali", Arial, Helvetica, sans-serif;
   text-align: center;
-  color: #2C2227;
+  color: #0f0f0f;
   letter-spacing: 0.1rem;
   font-weight: 600;
   opacity: 0.8;
@@ -152,7 +205,7 @@ main {
   text-align: center;
   margin-top: 1.5rem;
   color: #80ff80;
-  text-shadow: 2px 2px 3px black;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
   font-family: "Mali", Arial, Helvetica, sans-serif;
 }
 
@@ -167,7 +220,7 @@ main {
 }
 .rdp-contact-display a {
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
-  color: #2C2227;
+  color: #0f0f0f;
   transition: 150ms ease-in-out;
   text-decoration: underline;
 }
@@ -176,27 +229,27 @@ main {
 }
 .rdp-contact-display span {
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
-  color: #2C2227;
+  color: #0f0f0f;
 }
 .rdp-contact-display-phone {
   margin-bottom: 0.8rem;
 }
 .rdp-contact-display-phone:hover i {
-  color: #2C2227;
+  color: #0f0f0f;
   text-shadow: none;
 }
 .rdp-contact-display-email {
   margin-bottom: 0.8rem;
 }
 .rdp-contact-display-email:hover i {
-  color: #2C2227;
+  color: #0f0f0f;
   text-shadow: none;
 }
 .rdp-contact-display-address {
   margin-bottom: 0.8rem;
 }
 .rdp-contact-display-address:hover i {
-  color: #2C2227;
+  color: #0f0f0f;
   text-shadow: none;
 }
 .rdp-contact-display-hours {
@@ -207,47 +260,256 @@ main {
   font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
   color: #80ff80;
   text-align: center;
-  text-shadow: 2px 2px 5px black;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
 }
 .rdp-about-p {
   font-size: 1rem;
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
   text-align: center;
 }
+.rdp-about-img {
+  display: block;
+  cursor: pointer;
+  box-shadow: 0px 5px 10px black;
+  border-radius: 5px;
+  margin-inline: auto;
+}
+
+.cert-modal {
+  transform: scale(0) translate(0%, 100%);
+  transition: all 800ms ease-in-out;
+  opacity: 0;
+  position: fixed;
+  z-index: 20;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.9254901961);
+}
+.cert-modal-img {
+  margin: auto;
+  display: block;
+  transition: 300ms ease-in-out;
+  border-radius: 5px;
+}
+.cert-modal-caption {
+  display: block;
+  text-align: center;
+  color: #D3F5FF;
+  padding: 10px;
+  transition: 300ms ease-in-out;
+  background-color: #474747;
+  border-radius: 10px;
+}
+.cert-modal-close {
+  position: absolute;
+  color: #f1f1f1;
+  font-weight: 400;
+  transition: 150ms;
+  cursor: pointer;
+}
+.cert-modal-close:hover, .cert-modal-close:focus {
+  color: rgb(102, 101, 101);
+  text-decoration: none;
+  transform: scale(1.5);
+}
+
+.cert-modal.show {
+  transform: scale(1) translate(0%, 0%);
+  opacity: 1;
+}
 
 .rdp-bookings-heading1 {
   font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
   color: #80ff80;
   text-align: center;
-  font-size: 3rem;
-  text-shadow: 2px 2px 5px black;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
   padding-bottom: 1rem;
 }
 
 .rdp-bookings-heading2 {
   font-family: "Mali", Arial, Helvetica, sans-serif;
   color: #80ff80;
-  font-size: 3rem;
-  text-shadow: 2px 2px 5px black;
   padding-bottom: 1rem;
+  text-align: center;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
 }
 
 .rdp-bookings-form {
-  width: 90vw;
-  height: 100%;
   margin-block: 1rem;
   background-color: #b6b4b4;
-  box-shadow: 5px 5px 10px black;
+  box-shadow: 2px 2px 5px black;
   border-radius: 10px;
+  padding: 1rem;
+  margin-inline: auto;
+}
+.rdp-bookings-form .mb-1 {
+  display: flex;
+  flex-direction: column;
+}
+.rdp-bookings-form-label {
+  font-family: "Mali", Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  text-align: left;
+  color: #80ff80;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
+}
+.rdp-bookings-form-input {
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  padding: 0.5rem;
+  height: 2rem;
+  font-size: 1rem;
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+  color: #0f0f0f;
+}
+.rdp-bookings-form-input::placeholder {
+  font-family: "Mali", Arial, Helvetica, sans-serif;
+}
+.rdp-bookings-form-message {
+  height: 100px;
+  font-size: 1rem;
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+  border: none;
+  outline: none;
+  padding: 0.2rem;
+  border-radius: 10px;
+}
+.rdp-bookings-form-btn {
+  width: 100%;
+  text-align: center;
+}
+.rdp-bookings-form-btn-button {
+  font-family: "Mali", Arial, Helvetica, sans-serif;
+  color: #0f0f0f;
+  border: none;
+  border-radius: 0.625rem;
+  box-shadow: 2px 2px 4px black;
+  transition: 100ms ease-in-out;
+}
+.rdp-bookings-form-btn-button:hover, .rdp-bookings-form-btn-button:focus {
+  background-color: #80ff80;
+  transform: scale(1.05);
+  outline: none;
+}
+
+.gallery-main {
+  overflow: hidden;
 }
 
 .rdp-gallery {
   font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
   color: #80ff80;
   text-align: center;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
+}
+
+.header {
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.header .title {
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+  color: #80ff80;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
+  text-align: center;
+  font-family: "Mali", Arial, Helvetica, sans-serif;
+  padding-inline: 3rem;
+}
+.header .progress-bar {
+  display: flex;
+  gap: 0.3rem;
+  height: 0.3rem;
+}
+.header .progress-bar .active {
+  background-color: rgba(71, 71, 71, 0.8);
+}
+.header .progress-item {
+  margin-top: 1rem;
+  width: 1rem;
+  height: 0.5rem;
+  background-color: rgba(71, 71, 71, 0.2);
+}
+.header .progress-item .active {
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+.row {
+  margin-block: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.row .handle {
+  width: 3rem;
+  height: 4rem;
+  font-weight: 400;
+  font-size: 2rem;
+  z-index: 5;
+  flex-grow: 0;
+  background-color: rgba(154, 223, 139, 0.5);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  transition: all 200ms ease-in-out;
+}
+.row .handle:hover {
+  background-color: rgba(154, 223, 139, 0.8);
+}
+.row .handle:hover .text {
+  transform: scale(1.3);
+}
+.row .text {
+  transition: transform 200ms ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+.row .left-handle {
+  left: 0;
+  padding: 1rem;
+}
+.row .right-handle {
+  right: 0;
+  padding: 1rem;
+}
+.row .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.row .container .slider {
+  --slider-index: 0;
+  display: flex;
+  flex-grow: 1;
+  transform: translateX(calc(var(--slider-index) * -100%));
+  transition: transform 300ms ease-in-out;
+}
+.row .container .slider img {
+  flex: 0 0 calc(100% / var(--items-per-screen));
+  max-width: calc(100% / var(--items-per-screen));
+  padding: 0.25rem;
+}
+
+.rdp-sitting {
+  font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
+  color: #80ff80;
+  text-align: center;
+  text-shadow: 1px 1px 2px black, 2px 2px 3px black;
   font-size: 3rem;
-  text-shadow: 2px 2px 5px black;
-  padding-bottom: 1rem;
 }
 
 @media screen and (max-width: 576px) {
@@ -265,27 +527,67 @@ main {
     z-index: -1;
   }
 
+  .navbar-container {
+    width: 90vw;
+    height: 100px;
+    padding-top: 0.5rem;
+  }
+
   .navbar-heading .span-one {
     font-size: 2.5rem;
   }
   .navbar-heading .span-two {
     font-size: 1.5rem;
+    padding-bottom: 1rem;
   }
 
   .active > a {
     font-size: 1.1rem;
   }
 
+  .navmenu {
+    gap: 0.5rem;
+  }
+
   .social {
-    font-size: 2.1rem;
-    left: 1%;
-    gap: 1rem;
+    font-size: 1.3rem;
+    right: 0.5rem;
+    margin-top: 1rem;
+    gap: 0.2rem;
+  }
+
+  .fa-facebook {
+    padding: 0.4rem;
+    width: 32px;
+    height: 32px;
+  }
+
+  .fa-whatsapp {
+    width: 32px;
+    height: 32px;
+    padding-top: 0.3rem;
   }
 
   .disclaimer {
     font-size: 0.7rem;
   }
 
+  .modal {
+    top: 10%;
+  }
+  .modal-title {
+    font-size: 1.1rem;
+  }
+  .modal-body-img {
+    width: 180px;
+  }
+  .modal-body a {
+    font-size: 1rem;
+  }
+
+  .rdp {
+    padding-top: 11em;
+  }
   .rdp-name {
     font-size: 3rem;
     padding-bottom: 1rem;
@@ -333,14 +635,77 @@ main {
   }
   .rdp-about-img {
     display: block;
-    width: 100%;
+    width: 70%;
     margin-bottom: 1rem;
+    margin-inline: auto;
     text-align: center;
+  }
+
+  .cert-modal-img {
+    width: 100%;
+  }
+  .cert-modal-caption {
+    width: 80%;
+    height: auto;
+    font-size: 1rem;
+    margin-top: 4rem;
+    margin-inline: auto;
+  }
+  .cert-modal-close {
+    top: 0;
+    right: 10px;
+    font-size: 2rem;
+  }
+
+  .rdp-bookings-form {
+    width: 80vw;
+    height: 100%;
+  }
+  .rdp-bookings-form-label {
+    font-size: 1.1rem;
+  }
+  .rdp-bookings-form-input {
+    width: 100%;
+  }
+  .rdp-bookings-form-input::placeholder {
+    font-size: 1rem;
+  }
+  .rdp-bookings-form-btn-button {
+    margin-top: 1rem;
+    width: 7rem;
+    height: 2rem;
+    font-size: 1rem;
+  }
+
+  .rdp-bookings-heading1 {
+    font-size: 3rem;
+  }
+
+  .rdp-bookings-heading2 {
+    font-size: 2rem;
+  }
+
+  .rdp-bookings-form {
+    background-image: url("../img/pawprint_background_black_med.png");
+    background-size: contain;
+    background-blend-mode: soft-light;
+  }
+
+  .rdp-gallery {
+    font-size: 3rem;
+  }
+
+  .rdp-sitting {
+    font-size: 3rem;
+  }
+
+  .slider {
+    --items-per-screen: 3;
   }
 }
 @media screen and (min-width: 576px) {
   .navbar-container {
-    width: 60vw;
+    width: 70vw;
   }
 
   body::before {
@@ -358,11 +723,26 @@ main {
     width: 100%;
   }
 
+  .navbar-container {
+    height: 100px;
+  }
   .navbar-container .span-one {
-    font-size: 4rem;
+    font-size: 2.5rem;
   }
   .navbar-container .span-two {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    margin-left: -1.5rem;
+  }
+  .navbar-container .navbar-heading {
+    display: block;
+    padding: 0;
+    margin: 0;
+  }
+  .navbar-container .menu-item-link {
+    font-size: 1.2rem;
+  }
+  .navbar-container .active > a {
+    font-size: 1.3rem;
   }
 
   .menu-item-link {
@@ -373,17 +753,65 @@ main {
     font-size: 1.6rem;
   }
 
+  .navmenu {
+    gap: 1rem;
+  }
+
   .social {
-    font-size: 3rem;
-    left: 12%;
+    font-size: 1.5rem;
+    right: -3rem;
+    gap: 0.3rem;
+    padding-top: 0.3rem;
+  }
+
+  .fa-facebook {
+    padding-top: 0.4rem;
+    width: 38px;
+    height: 38px;
+    transition: transform 300ms ease-in-out;
+  }
+  .fa-facebook:hover {
+    transform: scale(1.15);
+  }
+
+  .fa-whatsapp {
+    padding-top: 0.3rem;
+    width: 38px;
+    height: 38px;
+    transition: transform 300ms ease-in-out;
+  }
+  .fa-whatsapp:hover {
+    transform: scale(1.15);
   }
 
   .disclaimer {
     font-size: 0.8rem;
   }
 
+  .copyright img {
+    opacity: 0.8;
+    transition: 300ms ease-in-out;
+  }
+  .copyright img:hover {
+    opacity: 1;
+    transform: scale(1.2);
+  }
+
+  .modal {
+    top: 10%;
+  }
+  .modal-title {
+    font-size: 2rem;
+  }
+  .modal-body-img {
+    width: 300px;
+  }
+  .modal-body a {
+    font-size: 1.5rem;
+  }
+
   .rdp {
-    padding-top: 15em;
+    padding-top: 10em;
   }
   .rdp-name {
     font-size: 4rem;
@@ -429,23 +857,121 @@ main {
   }
   .rdp-about-img {
     display: block;
-    width: 60%;
+    width: 40%;
     height: auto;
     margin-bottom: 1rem;
   }
+  .rdp-about-img:hover {
+    opacity: 0.7;
+  }
+
+  .cert-modal-img {
+    width: 100%;
+  }
+  .cert-modal-caption {
+    width: 80%;
+    height: auto;
+    font-size: 1rem;
+    margin-top: 4rem;
+    margin-inline: auto;
+  }
+  .cert-modal-close {
+    top: 0;
+    right: 10px;
+    font-size: 3rem;
+  }
+
+  .rdp-bookings-heading1 {
+    font-size: 3rem;
+  }
+
+  .rdp-bookings-form {
+    width: 60vw;
+    background-image: url("../img/pawprint_background_black_med.png");
+    background-size: contain;
+    background-blend-mode: soft-light;
+  }
+  .rdp-bookings-form-label {
+    font-size: 1.1rem;
+  }
+  .rdp-bookings-form-input {
+    width: 100%;
+  }
+  .rdp-bookings-form-input::placeholder {
+    font-size: 1rem;
+  }
+  .rdp-bookings-form-btn-button {
+    margin-top: 1rem;
+    width: 9rem;
+    height: 2.5rem;
+    font-size: 1.3rem;
+  }
+
+  .rdp-gallery {
+    font-size: 3rem;
+  }
+
+  .title {
+    font-size: 1.5rem;
+    margin-top: 3rem;
+  }
+
+  .slider {
+    --items-per-screen: 4;
+  }
 }
 @media screen and (min-width: 1024px) {
-  .navbar-container {
-    width: 70vw;
+  .navbar-container .span-one {
+    font-size: 3rem;
+  }
+  .navbar-container .span-two {
+    font-size: 2.5rem;
+    margin-left: -1.5rem;
+  }
+  .navbar-container .navbar-heading {
+    display: block;
+    padding: 0;
+    margin: 0;
+  }
+  .navbar-container .menu-item-link {
+    font-size: 1.2rem;
+  }
+  .navbar-container .active > a {
+    font-size: 1.3rem;
+  }
+
+  .navmenu {
+    gap: 2rem;
   }
 
   .social {
-    font-size: 3rem;
-    left: 10%;
+    font-size: 1.5rem;
+    right: -3rem;
+    gap: 0.2rem;
+    margin-top: 0.2rem;
+  }
+
+  .fa-facebook {
+    padding-top: 0.4rem;
+    width: 38px;
+    height: 38px;
+    transition: transform 300ms ease-in-out;
+  }
+  .fa-facebook:hover {
+    transform: scale(1.15);
+  }
+
+  .fa-whatsapp {
+    width: 38px;
+    height: 38px;
+    transition: transform 300ms ease-in-out;
+  }
+  .fa-whatsapp:hover {
+    transform: scale(1.15);
   }
 
   .rdp {
-    padding-top: 15em;
+    padding-top: 8em;
   }
   .rdp-name {
     font-size: 5rem;
@@ -459,8 +985,8 @@ main {
   }
   .rdp-map {
     margin-top: 2rem;
-    width: 700px;
-    height: 500px;
+    width: 600px;
+    height: 400px;
   }
 
   .rdp-contact-display {
@@ -478,8 +1004,73 @@ main {
   }
   .rdp-about-img {
     display: block;
-    width: 60%;
+    width: 30%;
     height: auto;
     margin-bottom: 1rem;
+    transition: 300ms ease-in-out;
+  }
+  .rdp-about-img:hover {
+    opacity: 0.7;
+  }
+
+  .modal {
+    margin-top: 0%;
+  }
+
+  .cert-modal-img {
+    width: 40%;
+  }
+  .cert-modal-caption {
+    width: 40%;
+  }
+  .cert-modal-close {
+    top: 0;
+    right: 30px;
+    font-size: 3rem;
+  }
+
+  .rdp-bookings-form {
+    width: 40vw;
+  }
+  .rdp-bookings-form-label {
+    font-size: 1.3rem;
+  }
+  .rdp-bookings-form-input {
+    width: 100%;
+  }
+  .rdp-bookings-form-input::placeholder {
+    font-size: 1rem;
+  }
+  .rdp-bookings-form-btn-button {
+    margin-top: 1rem;
+    width: 9rem;
+    height: 2.5rem;
+    font-size: 1.2rem;
+  }
+
+  .title {
+    font-size: 2rem;
+    margin-top: 3rem;
+  }
+
+  .slider {
+    --items-per-screen: 5;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .cert-modal-img {
+    width: 40%;
+  }
+  .cert-modal-caption {
+    width: 40%;
+    height: auto;
+    font-size: 1rem;
+    margin-top: 4rem;
+    margin-inline: auto;
+  }
+  .cert-modal-close {
+    top: 10px;
+    right: 50px;
+    font-size: 3rem;
   }
 }
