--- a/css/main.css
+++ b/css/main.css
@@ -155,11 +155,11 @@ footer {
 }
 
 .menu-item-link {
-  color: #0f0f0f;
+  color: #D3F5FF;
   font-family: "Bebas Neue", Arial, Helvetica, sans-serif;
   letter-spacing: 0.1rem;
   transition: 150ms ease-in-out;
-  text-shadow: 1px 1px 2px antiquewhite, 2px 2px 2px antiquewhite;
+  text-shadow: 1px 1px 2px #000000, 2px 2px 2px #000000;
 }
 .menu-item-link:hover, .menu-item-link:focus {
   color: #80ff80;
@@ -478,10 +478,12 @@ footer {
 .row .left-handle {
   left: 0;
   padding: 1rem;
+  margin: 0.5rem;
 }
 .row .right-handle {
   right: 0;
   padding: 1rem;
+  margin: 0.5rem;
 }
 .row .container {
   display: flex;
@@ -502,6 +504,45 @@ footer {
   padding: 0.25rem;
 }
 
+.gallery-modal {
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(71, 71, 71, 0.8);
+  display: none;
+  animation: zoom 0.3s linear;
+}
+.gallery-modal-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 100px auto;
+  padding-top: 1rem;
+  animation: zoom 0.3s linear;
+}
+.gallery-modal-close {
+  position: absolute;
+  top: 1rem;
+  right: 3rem;
+  font-size: 2rem;
+  font-weight: 700;
+  transition: all 300ms ease-in-out;
+  z-index: 100;
+  cursor: pointer;
+}
+
+@keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
 .rdp-sitting {
   font-family: "Love Ya Like A Sister", Arial, Helvetica, sans-serif;
   color: #80ff80;
@@ -524,13 +565,11 @@ footer {
     width: 100%;
     z-index: -1;
   }
-
   .navbar-container {
     width: 90vw;
-    height: 100px;
+    height: 150px;
     padding-top: 0.5rem;
   }
-
   .navbar-heading .span-one {
     font-size: 2.5rem;
   }
@@ -538,38 +577,31 @@ footer {
     font-size: 1.5rem;
     padding-bottom: 1rem;
   }
-
   .active > a {
     font-size: 1.1rem;
   }
-
   .navmenu {
     gap: 0.5rem;
   }
-
   .social {
     font-size: 1.3rem;
     right: 0.5rem;
     margin-top: 1rem;
     gap: 0.2rem;
   }
-
   .fa-facebook {
     padding: 0.4rem;
     width: 32px;
     height: 32px;
   }
-
   .fa-whatsapp {
     width: 32px;
     height: 32px;
     padding-top: 0.3rem;
   }
-
   .disclaimer {
     font-size: 0.7rem;
   }
-
   .modal {
     top: 10%;
   }
@@ -582,7 +614,6 @@ footer {
   .modal-body a {
     font-size: 1rem;
   }
-
   .rdp {
     padding-top: 11em;
   }
@@ -604,13 +635,11 @@ footer {
   .rdp-contact-heading {
     font-size: 5rem;
   }
-
   .rdp-contact-heading {
     margin-top: 1.5rem;
     font-size: 2rem;
     margin-bottom: 1rem;
   }
-
   .rdp-contact-display {
     font-size: 1.5rem;
     margin-left: 2rem;
@@ -624,7 +653,6 @@ footer {
   .rdp-contact-display span {
     font-size: 1rem;
   }
-
   .rdp-about {
     font-size: 3rem;
   }
@@ -638,7 +666,6 @@ footer {
     margin-inline: auto;
     text-align: center;
   }
-
   .cert-modal-img {
     width: 100%;
   }
@@ -654,7 +681,6 @@ footer {
     right: 10px;
     font-size: 2rem;
   }
-
   .rdp-bookings-form {
     width: 80vw;
     height: 100%;
@@ -674,29 +700,29 @@ footer {
     height: 2rem;
     font-size: 1rem;
   }
-
   .rdp-bookings-heading1 {
     font-size: 3rem;
   }
-
   .rdp-bookings-heading2 {
     font-size: 2rem;
   }
-
   .rdp-bookings-form {
     background-image: url("../img/pawprint_background_black_med.png");
     background-size: contain;
     background-blend-mode: soft-light;
   }
-
   .rdp-gallery {
     font-size: 3rem;
   }
-
+  .gallery-modal-img {
+    width: 90%;
+  }
+  .gallery-modal-close {
+    color: #D3F5FF;
+  }
   .rdp-sitting {
     font-size: 3rem;
   }
-
   .slider {
     --items-per-screen: 3;
   }
@@ -705,7 +731,6 @@ footer {
   .navbar-container {
     width: 70vw;
   }
-
   body::before {
     content: url("../img/pawprint_background_black_med.png");
     position: fixed;
@@ -716,11 +741,9 @@ footer {
     opacity: 0.1;
     width: 100%;
   }
-
   main {
     width: 100%;
   }
-
   .navbar-container {
     height: 100px;
   }
@@ -742,26 +765,21 @@ footer {
   .navbar-container .active > a {
     font-size: 1.3rem;
   }
-
   .menu-item-link {
     font-size: 1.5rem;
   }
-
   .active > a {
     font-size: 1.6rem;
   }
-
   .navmenu {
     gap: 1rem;
   }
-
   .social {
     font-size: 1.5rem;
     right: -3rem;
     gap: 0.3rem;
     padding-top: 0.3rem;
   }
-
   .fa-facebook {
     padding-top: 0.4rem;
     width: 38px;
@@ -771,7 +789,6 @@ footer {
   .fa-facebook:hover {
     transform: scale(1.15);
   }
-
   .fa-whatsapp {
     padding-top: 0.3rem;
     width: 38px;
@@ -781,11 +798,9 @@ footer {
   .fa-whatsapp:hover {
     transform: scale(1.15);
   }
-
   .disclaimer {
     font-size: 0.8rem;
   }
-
   .copyright img {
     opacity: 0.8;
     transition: 300ms ease-in-out;
@@ -794,7 +809,6 @@ footer {
     opacity: 1;
     transform: scale(1.2);
   }
-
   .modal {
     top: 10%;
   }
@@ -807,7 +821,6 @@ footer {
   .modal-body a {
     font-size: 1.5rem;
   }
-
   .rdp {
     padding-top: 10em;
   }
@@ -826,13 +839,11 @@ footer {
     width: 400px;
     height: 300px;
   }
-
   .rdp-contact-heading {
     margin-top: 1.5rem;
     font-size: 3rem;
     margin-bottom: 1rem;
   }
-
   .rdp-contact-display {
     font-size: 3rem;
     margin-left: 7rem;
@@ -846,7 +857,6 @@ footer {
   .rdp-contact-display span {
     font-size: 1.3rem;
   }
-
   .rdp-about {
     font-size: 3rem;
   }
@@ -862,7 +872,6 @@ footer {
   .rdp-about-img:hover {
     opacity: 0.7;
   }
-
   .cert-modal-img {
     width: 100%;
   }
@@ -878,11 +887,9 @@ footer {
     right: 10px;
     font-size: 3rem;
   }
-
   .rdp-bookings-heading1 {
     font-size: 3rem;
   }
-
   .rdp-bookings-form {
     width: 60vw;
     background-image: url("../img/pawprint_background_black_med.png");
@@ -904,18 +911,31 @@ footer {
     height: 2.5rem;
     font-size: 1.3rem;
   }
-
   .rdp-gallery {
     font-size: 3rem;
   }
-
   .title {
     font-size: 1.5rem;
     margin-top: 3rem;
   }
-
   .slider {
-    --items-per-screen: 4;
+    --items-per-screen: 5;
+  }
+  .slider img {
+    transition: all 150ms ease-in-out;
+  }
+  .slider img:hover {
+    opacity: 0.9;
+    border: 3px solid #d4d4d4;
+    box-shadow: 2px 2px 5px black;
+    border-radius: 10px;
+    background-color: #80ff80;
+  }
+  .gallery-modal-img {
+    width: 40%;
+  }
+  .gallery-modal-close {
+    color: #D3F5FF;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -937,18 +957,15 @@ footer {
   .navbar-container .active > a {
     font-size: 1.3rem;
   }
-
   .navmenu {
     gap: 2rem;
   }
-
   .social {
     font-size: 1.5rem;
     right: -3rem;
     gap: 0.2rem;
     margin-top: 0.2rem;
   }
-
   .fa-facebook {
     padding-top: 0.4rem;
     width: 38px;
@@ -958,7 +975,6 @@ footer {
   .fa-facebook:hover {
     transform: scale(1.15);
   }
-
   .fa-whatsapp {
     width: 38px;
     height: 38px;
@@ -967,7 +983,6 @@ footer {
   .fa-whatsapp:hover {
     transform: scale(1.15);
   }
-
   .rdp {
     padding-top: 8em;
   }
@@ -986,14 +1001,12 @@ footer {
     width: 600px;
     height: 400px;
   }
-
   .rdp-contact-display {
     font-size: 3rem;
     margin-inline: auto;
     width: 40vw;
     padding-block: 2rem;
   }
-
   .rdp-about {
     font-size: 4rem;
   }
@@ -1010,11 +1023,9 @@ footer {
   .rdp-about-img:hover {
     opacity: 0.7;
   }
-
   .modal {
     margin-top: 0%;
   }
-
   .cert-modal-img {
     width: 40%;
   }
@@ -1026,7 +1037,6 @@ footer {
     right: 30px;
     font-size: 3rem;
   }
-
   .rdp-bookings-form {
     width: 40vw;
   }
@@ -1045,14 +1055,22 @@ footer {
     height: 2.5rem;
     font-size: 1.2rem;
   }
-
   .title {
     font-size: 2rem;
     margin-top: 3rem;
   }
-
   .slider {
     --items-per-screen: 5;
+  }
+  .slider img {
+    transition: all 150ms ease-in-out;
+  }
+  .slider img:hover {
+    opacity: 0.9;
+    border: 3px solid #d4d4d4;
+    box-shadow: 2px 2px 5px black;
+    border-radius: 10px;
+    background-color: #80ff80;
   }
 }
 @media screen and (min-width: 1600px) {
